# n3-sdl

./: .gitignore  Cargo.toml  Session.vim
assets/: female0.json  player-female0.json  player.json  test.json  testanim.json  testmap.jmap  testmap.json  testmap.tmx  tilemap-big-0.tmx  tilemap-big-1.json  tilemap-big-1.tmx  tilemap-small-0.json  tilemap-small-0.tmx
src/: .types.rs.swp  animation.rs  camera.rs  context.rs  game.rs  main.rs  npc.rs  player.rs  renderable.rs  sprite.rs  sprite_cache.rs  types.rs  util.rs  world.rs
src/animation/: anim_manager.rs  mod.rs
src/entities/: mod.rs  player.rs
src/entity/: mod.rs  player.rs
src/scene/: game_scene.rs  mod.rs
src/sprite/: mod.rs  sprite_cache.rs  sprite_manager.rs  spritecache.rs
src/state/: mod.rs  state_manager.rs
src/tilemap/: layer.rs  mod.rs  object.rs  tile.rs  tilelayer.rs  tileset.rs
